# bash-workshop

./: setup.sh  tutor.sh
ctf/: Cargo.toml  build.rs
ctf/src/: lib.rs
ctf/src/assets/: malware.sh
tutor-modules/: 01-intro.sh  02-ssh.sh  03-navigation.sh  04-files.sh  04-traversal.sh  05-path-traversal.sh  05-reading.sh  06-file-ops.sh  07-links.sh  08-help.sh  09-discovery.sh  10-wildcards.sh  11-adv-find.sh  11.5-binary-triage.sh  12-redirect.sh  13-piping.sh  14-parsing.sh  15-adv-regex.sh  15.5-hashing-iocs.sh  16-permissions.sh  17-sudo.sh  18-env-variables.sh  19-processes.sh  19.5-user-activity.sh  20-network.sh  20.5-dns-pcap.sh  21-transfer.sh  22-auditing.sh  23-evidence-handling.sh  old.sh
