[package]
name = "bash-workshop-ctf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
base64 = "0.21"
libc = "0.2.186"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
